# puff-cast

./: .gitignore  forecast_archive_research.py  pyproject.toml  vercel.json
.claude/projects/-Users-seph-dev-puff-cast/memory/: MEMORY.md  project_overview.md  user_profile.md
.github/workflows/: forecast.yml
data/predictions/: forecast_log.jsonl
docs/: funnels.json  index.html  latest.json  upcoming_funnels.json  verification.json
models/: APAM2_12h.json  APAM2_18h.json  APAM2_1h.json  APAM2_24h.json  APAM2_3h.json  APAM2_6h.json  CAMM2_12h.json  CAMM2_18h.json  CAMM2_1h.json  CAMM2_24h.json  CAMM2_3h.json  CAMM2_6h.json  SLIM2_12h.json  SLIM2_18h.json  SLIM2_1h.json  SLIM2_24h.json  SLIM2_3h.json  SLIM2_6h.json  TPLM2_12h.json  TPLM2_18h.json  TPLM2_1h.json  TPLM2_24h.json  TPLM2_3h.json  TPLM2_6h.json
notebooks/: 01_exploration.py
src/puff_cast/: __init__.py  compare.py  compare_lead_time.py  ensemble_mos.py  ensemble_tuned.py  fetch.py  fetch_asos.py  fetch_coops.py  fetch_forecasts.py  fetch_hrrr_enhanced.py  fetch_hrrr_regional.py  fetch_lead_time.py  forecast.py  hrrr_mos.py  mos_enhanced.py  pipeline.py  stacking_ensemble.py  stations.py  train_and_save.py
web/: .gitignore  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/components/: WindChart.tsx  WindChartWrapper.tsx
web/public/: CNAME
web/public/data/: funnels.json  latest.json  upcoming_funnels.json  verification.json
